# stock_report

./: .env.example  .gitignore  CLAUDE.md  dates.json  design.md  index.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily-report.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
data/: 2026-04-15.json  2026-04-17.json  2026-04-18.json  2026-04-23.json  2026-04-27.json  2026-04-29.json
data/data/: 2026-04-16.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-24.json  2026-04-28.json  2026-04-30.json  2026-05-01.json  2026-05-04.json  2026-05-05.json
data/mapping/: theme_stock_mapping.json
specs/001-daily-report-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/agents/: aggregate.py  base.py  classify.py  deduplicate.py  fetch.py  normalize.py  output.py  parse.py  source_discovery.py  summarize.py  validate.py
src/config/: settings.py  sites.yaml
src/dedup/: matcher.py
src/normalizers/: brokerage.py  date.py  ticker.py
src/output/: html.py  json_output.py  markdown.py
src/parsers/: base.py  pdf_extractor.py  registry.py
src/pipeline/: checkpoint.py  logger.py  orchestrator.py
src/schemas/: daily_result.py  pipeline.py  report.py  summary.py
src/scrapers/: naver_theme.py
src/summarizer/: llm_client.py  prompt_templates.py
src/utils/: http.py  timezone.py
src/web/: app.py  build_static.py  (+1 more)
tests/: conftest.py
(+28 files in other folders)
